--- a/.github/workflows/master_fastapi-function-app-naman.yml
+++ b/.github/workflows/master_fastapi-function-app-naman.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure Functions: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python project to Azure Function App - FastAPI-Function-App-Naman
+name: Build and deploy Python project to Azure Function App - FastAPI-Function-App-naman
 
 on:
   push:
@@ -53,10 +53,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -66,18 +63,11 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip     
         
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E782F96EC95A4C4EBA4166FBA9E9CA79 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D186BFC0D3E64D5FA6B8442CCFF7704C }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3B4B5949BC0542F2AD9B3DF7E8B5DBA3 }}
-
       - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
         id: deploy-to-function
         with:
-          app-name: 'FastAPI-Function-App-Naman'
+          app-name: 'FastAPI-Function-App-naman'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_ECC0B3CD38A642438FE976A107B6EBB0 }}
